--- a/examples/eggbox.ipynb
+++ b/examples/eggbox.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "f353fffa",
    "metadata": {},
    "outputs": [
@@ -31,14 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "7332it [00:04, 1516.01it/s, +1000 | bound: 27 | nc: 1 | ncall: 120568 | eff(%):  6.968 | loglstar:   -inf < 242.999 <    inf | logz: 235.907 +/-  0.078 | dlogz:  0.001 >  1.009]"
+      "7410it [00:06, 1068.17it/s, +1000 | bound: 26 | nc: 1 | ncall: 120031 | eff(%):  7.065 | loglstar:   -inf < 242.999 <    inf | logz: 235.831 +/-  0.078 | dlogz:  0.001 >  1.009]"
      ]
     },
     {
@@ -47,9 +40,9 @@
      "text": [
       "\n",
       "==== RESULTS ====\n",
-      "dynesty estimated logZ = 235.907 ± 0.193\n",
+      "dynesty estimated logZ = 235.831 ± 0.194\n",
       "True logZ (literature) = 235.856\n",
-      "Error = 0.051\n"
+      "Error = -0.025\n"
      ]
     },
     {
@@ -160,31 +153,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total samples: 2778 Dimensions: 2\n",
+      "Total samples: 2794 Dimensions: 2\n",
       "\n",
-      "Using Morph_Group for proposal distribution.\n",
+      "Using Morph_Pairwise for proposal distribution.\n",
+      "MI file not found at ./morphZ_eggbox//params_MI.json. Running dependency tree computation...\n",
+      "\n",
+      "Top 10 MI pairs:\n",
+      "  param_0 — param_1 : 0.263168\n",
+      "All MI pairs saved to morphZ_eggbox/params_MI.json\n",
+      "BW file not found at ./morphZ_eggbox//bw_cv_iso_2D.json. Running Bw with cv_iso...\n",
+      "Bandwidths saved to ./morphZ_eggbox/bw_cv_iso_2D.json\n",
+      "Processed 1 groups and 0 single parameters\n",
       "\n",
       "Estimation 1/4\n",
       "Evaluating target distribution: 2000/2000\n",
-      "Filtered proposal samples: 1652 valid samples out of 2000 total samples.\n",
-      " iteration: 3 log(z) old: 235.91373918726165 log(z) New: 235.91372891420525\n",
-      "Converged in 3 iterations. log(z): 235.9137 +/-: 0.0587\n",
+      "Filtered proposal samples: 1639 valid samples out of 2000 total samples.\n",
+      " iteration: 3 log(z) old: 236.10580722443498 log(z) New: 236.10580616721793\n",
+      "Converged in 3 iterations. log(z): 236.1058 +/-: 0.0687\n",
       "Estimation 2/4\n",
       "Evaluating target distribution: 2000/2000\n",
-      "Filtered proposal samples: 1655 valid samples out of 2000 total samples.\n",
-      " iteration: 3 log(z) old: 235.92638714596265 log(z) New: 235.92630935460556\n",
-      "Converged in 3 iterations. log(z): 235.9264 +/-: 0.0589\n",
+      "Filtered proposal samples: 1614 valid samples out of 2000 total samples.\n",
+      " iteration: 3 log(z) old: 236.11276335413257 log(z) New: 236.11278040096247\n",
+      "Converged in 3 iterations. log(z): 236.1128 +/-: 0.0684\n",
       "Estimation 3/4\n",
       "Evaluating target distribution: 2000/2000\n",
-      "Filtered proposal samples: 1653 valid samples out of 2000 total samples.\n",
-      " iteration: 3 log(z) old: 235.85835196837888 log(z) New: 235.85834412413973\n",
-      "Converged in 3 iterations. log(z): 235.8584 +/-: 0.0598\n",
+      "Filtered proposal samples: 1604 valid samples out of 2000 total samples.\n",
+      " iteration: 3 log(z) old: 236.081322879937 log(z) New: 236.0812848014298703\n",
+      "Converged in 3 iterations. log(z): 236.0813 +/-: 0.0711\n",
       "Estimation 4/4\n",
       "Evaluating target distribution: 2000/2000\n",
-      "Filtered proposal samples: 1670 valid samples out of 2000 total samples.\n",
-      " iteration: 4 log(z) old: 235.9454018067844 log(z) New: 235.945392856989348\n",
-      "Converged in 4 iterations. log(z): 235.9454 +/-: 0.0582\n",
-      "Saved log(z) to ./morphZ_eggbox//logz_morph_z_2_group_cv_iso.txt\n",
+      "Filtered proposal samples: 1651 valid samples out of 2000 total samples.\n",
+      " iteration: 3 log(z) old: 236.01285967190375 log(z) New: 236.01285935661365\n",
+      "Converged in 3 iterations. log(z): 236.0129 +/-: 0.0716\n",
+      "Saved log(z) to ./morphZ_eggbox//logz_morph_z_pair_cv_iso.txt\n",
       "True: 235.856\n"
      ]
     }
@@ -203,7 +204,7 @@
     "log_prob,\n",
     "lnprobfn,\n",
     "n_resamples=2000,\n",
-    "thin=1,n_estimations=4,morph_type=\"2_group\",kde_bw=\"cv_iso\",output_path='./morphZ_eggbox/')\n",
+    "thin=1,n_estimations=4,morph_type=\"pair\",kde_bw=\"cv_iso\",output_path='./morphZ_eggbox/',top_k_greedy=2)\n",
     "print('True:', true_logz)"
    ]
   },
@@ -254,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nanograv",
+   "display_name": "pta",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
