fixed plots and saving.

--- a/examples/eggbox.ipynb
+++ b/examples/eggbox.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f353fffa",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7410it [00:06, 1068.17it/s, +1000 | bound: 26 | nc: 1 | ncall: 120031 | eff(%):  7.065 | loglstar:   -inf < 242.999 <    inf | logz: 235.831 +/-  0.078 | dlogz:  0.001 >  1.009]"
+      "7392it [00:04, 1615.13it/s, +1000 | bound: 26 | nc: 1 | ncall: 120363 | eff(%):  7.031 | loglstar:   -inf < 242.999 <    inf | logz: 235.847 +/-  0.079 | dlogz:  0.001 >  1.009]"
      ]
     },
     {
@@ -40,9 +40,9 @@
      "text": [
       "\n",
       "==== RESULTS ====\n",
-      "dynesty estimated logZ = 235.831 ± 0.194\n",
+      "dynesty estimated logZ = 235.847 ± 0.193\n",
       "True logZ (literature) = 235.856\n",
-      "Error = -0.025\n"
+      "Error = -0.009\n"
      ]
     },
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ad336152",
    "metadata": {},
    "outputs": [
@@ -153,40 +153,102 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total samples: 2794 Dimensions: 2\n",
+      "Total samples: 2798 Dimensions: 2\n",
+      "Filtered proposal samples: 18025 valid samples out of 20000 total samples.\n",
+      "Estimation 1/100\n",
+      "iteration: 2 log(z) old: 235.94292340846422 log(z) New: 235.94274662439173\n",
+      "Converged in 2 iterations. log(z): 235.9429 +/-: 0.0055\n",
       "\n",
-      "Using Morph_Pairwise for proposal distribution.\n",
-      "MI file not found at ./morphZ_eggbox//params_MI.json. Running dependency tree computation...\n",
+      "Filtered proposal samples: 18073 valid samples out of 20000 total samples.\n",
+      "Estimation 2/100\n",
+      "iteration: 2 log(z) old: 235.95075052842958 log(z) New: 235.95059072654576\n",
+      "Converged in 2 iterations. log(z): 235.9508 +/-: 0.0054\n",
       "\n",
-      "Top 10 MI pairs:\n",
-      "  param_0 — param_1 : 0.263168\n",
-      "All MI pairs saved to morphZ_eggbox/params_MI.json\n",
-      "BW file not found at ./morphZ_eggbox//bw_cv_iso_2D.json. Running Bw with cv_iso...\n",
-      "Bandwidths saved to ./morphZ_eggbox/bw_cv_iso_2D.json\n",
-      "Processed 1 groups and 0 single parameters\n",
+      "Filtered proposal samples: 18039 valid samples out of 20000 total samples.\n",
+      "Estimation 3/100\n",
+      "iteration: 2 log(z) old: 235.9428116321464 log(z) New: 235.94263632911188\n",
+      "Converged in 2 iterations. log(z): 235.9428 +/-: 0.0055\n",
       "\n",
-      "Estimation 1/4\n",
-      "Evaluating target distribution: 2000/2000\n",
-      "Filtered proposal samples: 1639 valid samples out of 2000 total samples.\n",
-      " iteration: 3 log(z) old: 236.10580722443498 log(z) New: 236.10580616721793\n",
-      "Converged in 3 iterations. log(z): 236.1058 +/-: 0.0687\n",
-      "Estimation 2/4\n",
-      "Evaluating target distribution: 2000/2000\n",
-      "Filtered proposal samples: 1614 valid samples out of 2000 total samples.\n",
-      " iteration: 3 log(z) old: 236.11276335413257 log(z) New: 236.11278040096247\n",
-      "Converged in 3 iterations. log(z): 236.1128 +/-: 0.0684\n",
-      "Estimation 3/4\n",
-      "Evaluating target distribution: 2000/2000\n",
-      "Filtered proposal samples: 1604 valid samples out of 2000 total samples.\n",
-      " iteration: 3 log(z) old: 236.081322879937 log(z) New: 236.0812848014298703\n",
-      "Converged in 3 iterations. log(z): 236.0813 +/-: 0.0711\n",
-      "Estimation 4/4\n",
-      "Evaluating target distribution: 2000/2000\n",
-      "Filtered proposal samples: 1651 valid samples out of 2000 total samples.\n",
-      " iteration: 3 log(z) old: 236.01285967190375 log(z) New: 236.01285935661365\n",
-      "Converged in 3 iterations. log(z): 236.0129 +/-: 0.0716\n",
-      "Saved log(z) to ./morphZ_eggbox//logz_morph_z_pair_cv_iso.txt\n",
-      "True: 235.856\n"
+      "Filtered proposal samples: 18035 valid samples out of 20000 total samples.\n",
+      "Estimation 4/100\n",
+      "iteration: 2 log(z) old: 235.93887459583726 log(z) New: 235.93875653187555\n",
+      "Converged in 2 iterations. log(z): 235.9389 +/-: 0.0054\n",
+      "\n",
+      "Filtered proposal samples: 18007 valid samples out of 20000 total samples.\n",
+      "Estimation 5/100\n",
+      "iteration: 2 log(z) old: 235.93972510584797 log(z) New: 235.93961072660653\n",
+      "Converged in 2 iterations. log(z): 235.9397 +/-: 0.0054\n",
+      "\n",
+      "Filtered proposal samples: 18101 valid samples out of 20000 total samples.\n",
+      "Estimation 6/100\n",
+      "iteration: 2 log(z) old: 235.94230200925665 log(z) New: 235.9421459237682\n",
+      "Converged in 2 iterations. log(z): 235.9423 +/-: 0.0055\n",
+      "\n",
+      "Filtered proposal samples: 18002 valid samples out of 20000 total samples.\n",
+      "Estimation 7/100\n",
+      "iteration: 2 log(z) old: 235.94704736467023 log(z) New: 235.94688145923672\n",
+      "Converged in 2 iterations. log(z): 235.9470 +/-: 0.0055\n",
+      "\n",
+      "Filtered proposal samples: 18065 valid samples out of 20000 total samples.\n",
+      "Estimation 8/100\n",
+      "iteration: 2 log(z) old: 235.9406201695327 log(z) New: 235.94046578040215\n",
+      "Converged in 2 iterations. log(z): 235.9406 +/-: 0.0055\n",
+      "\n",
+      "Filtered proposal samples: 17989 valid samples out of 20000 total samples.\n",
+      "Estimation 9/100\n",
+      "iteration: 2 log(z) old: 235.95066206779194 log(z) New: 235.9505089736161\n",
+      "Converged in 2 iterations. log(z): 235.9507 +/-: 0.0054\n",
+      "\n",
+      "Filtered proposal samples: 17941 valid samples out of 20000 total samples.\n",
+      "Estimation 10/100\n",
+      "iteration: 2 log(z) old: 235.9464396526004 log(z) New: 235.94627341529966\n",
+      "Converged in 2 iterations. log(z): 235.9464 +/-: 0.0055\n",
+      "\n",
+      "Filtered proposal samples: 18041 valid samples out of 20000 total samples.\n",
+      "Estimation 11/100\n",
+      "iteration: 2 log(z) old: 235.9539811528402 log(z) New: 235.95380015887176\n",
+      "Converged in 2 iterations. log(z): 235.9540 +/-: 0.0055\n",
+      "\n",
+      "Filtered proposal samples: 18077 valid samples out of 20000 total samples.\n",
+      "Estimation 12/100\n",
+      "iteration: 2 log(z) old: 235.95334342746955 log(z) New: 235.95314702288738\n",
+      "Converged in 2 iterations. log(z): 235.9533 +/-: 0.0055\n",
+      "\n",
+      "Filtered proposal samples: 18005 valid samples out of 20000 total samples.\n",
+      "Estimation 13/100\n",
+      "iteration: 2 log(z) old: 235.94946653671536 log(z) New: 235.94931222840793\n",
+      "Converged in 2 iterations. log(z): 235.9495 +/-: 0.0054\n",
+      "\n",
+      "Filtered proposal samples: 18062 valid samples out of 20000 total samples.\n",
+      "Estimation 14/100\n",
+      "iteration: 2 log(z) old: 235.94660065810422 log(z) New: 235.9464257405409\n",
+      "Converged in 2 iterations. log(z): 235.9466 +/-: 0.0055\n",
+      "\n",
+      "Filtered proposal samples: 18051 valid samples out of 20000 total samples.\n",
+      "Estimation 15/100\n",
+      "iteration: 2 log(z) old: 235.94607088224168 log(z) New: 235.9459014563858\n",
+      "Converged in 2 iterations. log(z): 235.9461 +/-: 0.0055\n",
+      "\n",
+      "Filtered proposal samples: 18112 valid samples out of 20000 total samples.\n",
+      "Estimation 16/100\n",
+      "iteration: 2 log(z) old: 235.95463730292693 log(z) New: 235.95445321434067\n",
+      "Converged in 2 iterations. log(z): 235.9546 +/-: 0.0054\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(tot_len):\n\u001b[1;32m      7\u001b[0m     log_prob[i] \u001b[38;5;241m=\u001b[39m lnprobfn(samples[i,:])\n\u001b[0;32m----> 9\u001b[0m log_p_estimate \u001b[38;5;241m=\u001b[39m morphZ\u001b[38;5;241m.\u001b[39mevidence(\n\u001b[1;32m     10\u001b[0m samples,\n\u001b[1;32m     11\u001b[0m log_prob,\n\u001b[1;32m     12\u001b[0m lnprobfn,\n\u001b[1;32m     13\u001b[0m n_resamples\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20000\u001b[39m,\n\u001b[1;32m     14\u001b[0m thin\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,n_estimations\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m,morph_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpair\u001b[39m\u001b[38;5;124m\"\u001b[39m,kde_bw\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m,output_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./morphZ_eggbox/\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrue:\u001b[39m\u001b[38;5;124m'\u001b[39m, true_logz)\n",
+      "File \u001b[0;32m/mnt/c/Users/zahra/OneDrive - AUT University/PhD Work/PhD Work/Local NT/package_morphZ/src/morphZ/morph.py:515\u001b[0m, in \u001b[0;36mevidence\u001b[0;34m(post_samples, log_posterior_values, log_posterior_function, n_resamples, thin, kde_fraction, bridge_start_fraction, max_iter, tol, morph_type, param_names, output_path, n_estimations, kde_bw, verbose, top_k_greedy, plot, prefer_corner)\u001b[0m\n\u001b[1;32m    513\u001b[0m     \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m    514\u001b[0m logger\u001b[38;5;241m.\u001b[39mdebug(estimation_label)\n\u001b[0;32m--> 515\u001b[0m log_z_results \u001b[38;5;241m=\u001b[39m bridge_sampling_ln(\n\u001b[1;32m    516\u001b[0m     log_posterior_function,\n\u001b[1;32m    517\u001b[0m     log_proposal_pdf,\n\u001b[1;32m    518\u001b[0m     samples_mor,\n\u001b[1;32m    519\u001b[0m     log_post,\n\u001b[1;32m    520\u001b[0m     samples_prop,\n\u001b[1;32m    521\u001b[0m     tol\u001b[38;5;241m=\u001b[39mtol,\n\u001b[1;32m    522\u001b[0m     max_iter\u001b[38;5;241m=\u001b[39mmax_iter,\n\u001b[1;32m    523\u001b[0m     estimation_label\u001b[38;5;241m=\u001b[39mestimation_label,\n\u001b[1;32m    524\u001b[0m )\n\u001b[1;32m    525\u001b[0m all_log_z_results\u001b[38;5;241m.\u001b[39mappend(log_z_results)\n\u001b[1;32m    527\u001b[0m \u001b[38;5;66;03m# Persist partial results every iteration so progress survives interruptions.\u001b[39;00m\n",
+      "File \u001b[0;32m/mnt/c/Users/zahra/OneDrive - AUT University/PhD Work/PhD Work/Local NT/package_morphZ/src/morphZ/bridge.py:54\u001b[0m, in \u001b[0;36mbridge_sampling_ln\u001b[0;34m(f, g, samples_post, log_post, samples_prop, tol, max_iter, estimation_label)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Compute logs of densities for posterior samples\u001b[39;00m\n\u001b[1;32m     53\u001b[0m log_f_post \u001b[38;5;241m=\u001b[39m log_post\n\u001b[0;32m---> 54\u001b[0m log_g_post \u001b[38;5;241m=\u001b[39m g(samples_post\u001b[38;5;241m.\u001b[39mT)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# Compute logs of densities for proposal samples\u001b[39;00m\n\u001b[1;32m     57\u001b[0m successful_samples \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[0;32m/mnt/c/Users/zahra/OneDrive - AUT University/PhD Work/PhD Work/Local NT/package_morphZ/src/morphZ/morph_pairwise.py:278\u001b[0m, in \u001b[0;36mMorph_Pairwise.logpdf\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    276\u001b[0m     kde2 \u001b[38;5;241m=\u001b[39m entry[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkde\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    277\u001b[0m     xy \u001b[38;5;241m=\u001b[39m x_arr[:, [i, j]]\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m--> 278\u001b[0m     logp \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m kde2\u001b[38;5;241m.\u001b[39mlogpdf(xy)\n\u001b[1;32m    280\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name, info \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msingle_kdes\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m    281\u001b[0m     idx \u001b[38;5;241m=\u001b[39m info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/miniconda3/envs/pta/lib/python3.12/site-packages/scipy/stats/_kde.py:636\u001b[0m, in \u001b[0;36mgaussian_kde.logpdf\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    633\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[1;32m    635\u001b[0m output_dtype, spec \u001b[38;5;241m=\u001b[39m _get_output_dtype(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcovariance, points)\n\u001b[0;32m--> 636\u001b[0m result \u001b[38;5;241m=\u001b[39m gaussian_kernel_estimate_log[spec](\n\u001b[1;32m    637\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39mT, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweights[:, \u001b[38;5;28;01mNone\u001b[39;00m],\n\u001b[1;32m    638\u001b[0m     points\u001b[38;5;241m.\u001b[39mT, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcho_cov, output_dtype)\n\u001b[1;32m    640\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result[:, \u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -203,8 +265,8 @@
     "samples,\n",
     "log_prob,\n",
     "lnprobfn,\n",
-    "n_resamples=2000,\n",
-    "thin=1,n_estimations=4,morph_type=\"pair\",kde_bw=\"cv_iso\",output_path='./morphZ_eggbox/',top_k_greedy=2)\n",
+    "n_resamples=1000,\n",
+    "thin=1,n_estimations=10,morph_type=\"pair\",kde_bw=0.01,output_path='./morphZ_eggbox/')\n",
     "print('True:', true_logz)"
    ]
   },
