--- a/examples/eggbox.ipynb
+++ b/examples/eggbox.ipynb
@@ -120,12 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "9424722b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import morphZ\n",
+    "import logging\n",
+    "from morphZ import setup_logging ; setup_logging(level=logging.INFO)\n",
     "# Prior bounds\n",
     "prior_min, prior_max = 0.0, 10.0 * np.pi\n",
     "prior_volume = (prior_max - prior_min) ** 2  # 2-D uniform cube\n",
@@ -145,110 +147,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ad336152",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.morph:Using Morph_Pairwise for proposal distribution.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total samples: 2798 Dimensions: 2\n",
-      "Filtered proposal samples: 18025 valid samples out of 20000 total samples.\n",
-      "Estimation 1/100\n",
-      "iteration: 2 log(z) old: 235.94292340846422 log(z) New: 235.94274662439173\n",
-      "Converged in 2 iterations. log(z): 235.9429 +/-: 0.0055\n",
+      "Total samples: 2798 Dimensions: 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge:Filtered proposal samples: 913 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.98151212619965 log(z) New: 235.90035327701224\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.90035327701224 log(z) New: 235.89787124216537\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.9004 +/-: 0.0164\n",
+      "INFO:morphZ.bridge:Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.89954280179742 log(z) New: 235.83890948021315\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.83890948021315 log(z) New: 235.83803528330358\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8389 +/-: 0.0177\n",
+      "INFO:morphZ.bridge:Filtered proposal samples: 899 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9491084747081 log(z) New: 235.86083587673193\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.86083587673193 log(z) New: 235.8585336067502\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8608 +/-: 0.0176\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered proposal samples: 913 valid samples out of 1000 total samples.\n",
+      "Estimation 1/10\n",
+      "iteration: 2 log(z) old: 235.90035327701224 log(z) New: 235.89787124216537\n",
+      "Converged in 2 iterations. log(z): 235.9004 +/-: 0.0164\n",
       "\n",
-      "Filtered proposal samples: 18073 valid samples out of 20000 total samples.\n",
-      "Estimation 2/100\n",
-      "iteration: 2 log(z) old: 235.95075052842958 log(z) New: 235.95059072654576\n",
-      "Converged in 2 iterations. log(z): 235.9508 +/-: 0.0054\n",
+      "Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "Estimation 2/10\n",
+      "iteration: 2 log(z) old: 235.83890948021315 log(z) New: 235.83803528330358\n",
+      "Converged in 2 iterations. log(z): 235.8389 +/-: 0.0177\n",
       "\n",
-      "Filtered proposal samples: 18039 valid samples out of 20000 total samples.\n",
-      "Estimation 3/100\n",
-      "iteration: 2 log(z) old: 235.9428116321464 log(z) New: 235.94263632911188\n",
-      "Converged in 2 iterations. log(z): 235.9428 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 18035 valid samples out of 20000 total samples.\n",
-      "Estimation 4/100\n",
-      "iteration: 2 log(z) old: 235.93887459583726 log(z) New: 235.93875653187555\n",
-      "Converged in 2 iterations. log(z): 235.9389 +/-: 0.0054\n",
-      "\n",
-      "Filtered proposal samples: 18007 valid samples out of 20000 total samples.\n",
-      "Estimation 5/100\n",
-      "iteration: 2 log(z) old: 235.93972510584797 log(z) New: 235.93961072660653\n",
-      "Converged in 2 iterations. log(z): 235.9397 +/-: 0.0054\n",
-      "\n",
-      "Filtered proposal samples: 18101 valid samples out of 20000 total samples.\n",
-      "Estimation 6/100\n",
-      "iteration: 2 log(z) old: 235.94230200925665 log(z) New: 235.9421459237682\n",
-      "Converged in 2 iterations. log(z): 235.9423 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 18002 valid samples out of 20000 total samples.\n",
-      "Estimation 7/100\n",
-      "iteration: 2 log(z) old: 235.94704736467023 log(z) New: 235.94688145923672\n",
-      "Converged in 2 iterations. log(z): 235.9470 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 18065 valid samples out of 20000 total samples.\n",
-      "Estimation 8/100\n",
-      "iteration: 2 log(z) old: 235.9406201695327 log(z) New: 235.94046578040215\n",
-      "Converged in 2 iterations. log(z): 235.9406 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 17989 valid samples out of 20000 total samples.\n",
-      "Estimation 9/100\n",
-      "iteration: 2 log(z) old: 235.95066206779194 log(z) New: 235.9505089736161\n",
-      "Converged in 2 iterations. log(z): 235.9507 +/-: 0.0054\n",
-      "\n",
-      "Filtered proposal samples: 17941 valid samples out of 20000 total samples.\n",
-      "Estimation 10/100\n",
-      "iteration: 2 log(z) old: 235.9464396526004 log(z) New: 235.94627341529966\n",
-      "Converged in 2 iterations. log(z): 235.9464 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 18041 valid samples out of 20000 total samples.\n",
-      "Estimation 11/100\n",
-      "iteration: 2 log(z) old: 235.9539811528402 log(z) New: 235.95380015887176\n",
-      "Converged in 2 iterations. log(z): 235.9540 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 18077 valid samples out of 20000 total samples.\n",
-      "Estimation 12/100\n",
-      "iteration: 2 log(z) old: 235.95334342746955 log(z) New: 235.95314702288738\n",
-      "Converged in 2 iterations. log(z): 235.9533 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 18005 valid samples out of 20000 total samples.\n",
-      "Estimation 13/100\n",
-      "iteration: 2 log(z) old: 235.94946653671536 log(z) New: 235.94931222840793\n",
-      "Converged in 2 iterations. log(z): 235.9495 +/-: 0.0054\n",
-      "\n",
-      "Filtered proposal samples: 18062 valid samples out of 20000 total samples.\n",
-      "Estimation 14/100\n",
-      "iteration: 2 log(z) old: 235.94660065810422 log(z) New: 235.9464257405409\n",
-      "Converged in 2 iterations. log(z): 235.9466 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 18051 valid samples out of 20000 total samples.\n",
-      "Estimation 15/100\n",
-      "iteration: 2 log(z) old: 235.94607088224168 log(z) New: 235.9459014563858\n",
-      "Converged in 2 iterations. log(z): 235.9461 +/-: 0.0055\n",
-      "\n",
-      "Filtered proposal samples: 18112 valid samples out of 20000 total samples.\n",
-      "Estimation 16/100\n",
-      "iteration: 2 log(z) old: 235.95463730292693 log(z) New: 235.95445321434067\n",
-      "Converged in 2 iterations. log(z): 235.9546 +/-: 0.0054\n",
+      "Filtered proposal samples: 899 valid samples out of 1000 total samples.\n",
+      "Estimation 3/10\n",
+      "iteration: 2 log(z) old: 235.86083587673193 log(z) New: 235.8585336067502\n",
+      "Converged in 2 iterations. log(z): 235.8608 +/-: 0.0176\n",
       "\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(tot_len):\n\u001b[1;32m      7\u001b[0m     log_prob[i] \u001b[38;5;241m=\u001b[39m lnprobfn(samples[i,:])\n\u001b[0;32m----> 9\u001b[0m log_p_estimate \u001b[38;5;241m=\u001b[39m morphZ\u001b[38;5;241m.\u001b[39mevidence(\n\u001b[1;32m     10\u001b[0m samples,\n\u001b[1;32m     11\u001b[0m log_prob,\n\u001b[1;32m     12\u001b[0m lnprobfn,\n\u001b[1;32m     13\u001b[0m n_resamples\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20000\u001b[39m,\n\u001b[1;32m     14\u001b[0m thin\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,n_estimations\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m,morph_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpair\u001b[39m\u001b[38;5;124m\"\u001b[39m,kde_bw\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m,output_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./morphZ_eggbox/\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrue:\u001b[39m\u001b[38;5;124m'\u001b[39m, true_logz)\n",
-      "File \u001b[0;32m/mnt/c/Users/zahra/OneDrive - AUT University/PhD Work/PhD Work/Local NT/package_morphZ/src/morphZ/morph.py:515\u001b[0m, in \u001b[0;36mevidence\u001b[0;34m(post_samples, log_posterior_values, log_posterior_function, n_resamples, thin, kde_fraction, bridge_start_fraction, max_iter, tol, morph_type, param_names, output_path, n_estimations, kde_bw, verbose, top_k_greedy, plot, prefer_corner)\u001b[0m\n\u001b[1;32m    513\u001b[0m     \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m    514\u001b[0m logger\u001b[38;5;241m.\u001b[39mdebug(estimation_label)\n\u001b[0;32m--> 515\u001b[0m log_z_results \u001b[38;5;241m=\u001b[39m bridge_sampling_ln(\n\u001b[1;32m    516\u001b[0m     log_posterior_function,\n\u001b[1;32m    517\u001b[0m     log_proposal_pdf,\n\u001b[1;32m    518\u001b[0m     samples_mor,\n\u001b[1;32m    519\u001b[0m     log_post,\n\u001b[1;32m    520\u001b[0m     samples_prop,\n\u001b[1;32m    521\u001b[0m     tol\u001b[38;5;241m=\u001b[39mtol,\n\u001b[1;32m    522\u001b[0m     max_iter\u001b[38;5;241m=\u001b[39mmax_iter,\n\u001b[1;32m    523\u001b[0m     estimation_label\u001b[38;5;241m=\u001b[39mestimation_label,\n\u001b[1;32m    524\u001b[0m )\n\u001b[1;32m    525\u001b[0m all_log_z_results\u001b[38;5;241m.\u001b[39mappend(log_z_results)\n\u001b[1;32m    527\u001b[0m \u001b[38;5;66;03m# Persist partial results every iteration so progress survives interruptions.\u001b[39;00m\n",
-      "File \u001b[0;32m/mnt/c/Users/zahra/OneDrive - AUT University/PhD Work/PhD Work/Local NT/package_morphZ/src/morphZ/bridge.py:54\u001b[0m, in \u001b[0;36mbridge_sampling_ln\u001b[0;34m(f, g, samples_post, log_post, samples_prop, tol, max_iter, estimation_label)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Compute logs of densities for posterior samples\u001b[39;00m\n\u001b[1;32m     53\u001b[0m log_f_post \u001b[38;5;241m=\u001b[39m log_post\n\u001b[0;32m---> 54\u001b[0m log_g_post \u001b[38;5;241m=\u001b[39m g(samples_post\u001b[38;5;241m.\u001b[39mT)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# Compute logs of densities for proposal samples\u001b[39;00m\n\u001b[1;32m     57\u001b[0m successful_samples \u001b[38;5;241m=\u001b[39m []\n",
-      "File \u001b[0;32m/mnt/c/Users/zahra/OneDrive - AUT University/PhD Work/PhD Work/Local NT/package_morphZ/src/morphZ/morph_pairwise.py:278\u001b[0m, in \u001b[0;36mMorph_Pairwise.logpdf\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    276\u001b[0m     kde2 \u001b[38;5;241m=\u001b[39m entry[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkde\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    277\u001b[0m     xy \u001b[38;5;241m=\u001b[39m x_arr[:, [i, j]]\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m--> 278\u001b[0m     logp \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m kde2\u001b[38;5;241m.\u001b[39mlogpdf(xy)\n\u001b[1;32m    280\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name, info \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msingle_kdes\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m    281\u001b[0m     idx \u001b[38;5;241m=\u001b[39m info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/miniconda3/envs/pta/lib/python3.12/site-packages/scipy/stats/_kde.py:636\u001b[0m, in \u001b[0;36mgaussian_kde.logpdf\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    633\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[1;32m    635\u001b[0m output_dtype, spec \u001b[38;5;241m=\u001b[39m _get_output_dtype(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcovariance, points)\n\u001b[0;32m--> 636\u001b[0m result \u001b[38;5;241m=\u001b[39m gaussian_kernel_estimate_log[spec](\n\u001b[1;32m    637\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39mT, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweights[:, \u001b[38;5;28;01mNone\u001b[39;00m],\n\u001b[1;32m    638\u001b[0m     points\u001b[38;5;241m.\u001b[39mT, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcho_cov, output_dtype)\n\u001b[1;32m    640\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result[:, \u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge:Filtered proposal samples: 902 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.98228851118733 log(z) New: 235.8964134013512\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.8964134013512 log(z) New: 235.89376128305366\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8964 +/-: 0.0166\n",
+      "INFO:morphZ.bridge:Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9570668962784 log(z) New: 235.88269815836225\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.88269815836225 log(z) New: 235.88078965205065\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8827 +/-: 0.0168\n",
+      "INFO:morphZ.bridge:Filtered proposal samples: 911 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9369731022758 log(z) New: 235.87220374473446\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.87220374473446 log(z) New: 235.8707666869567\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8722 +/-: 0.0169\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered proposal samples: 902 valid samples out of 1000 total samples.\n",
+      "Estimation 4/10\n",
+      "iteration: 2 log(z) old: 235.8964134013512 log(z) New: 235.89376128305366\n",
+      "Converged in 2 iterations. log(z): 235.8964 +/-: 0.0166\n",
+      "\n",
+      "Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "Estimation 5/10\n",
+      "iteration: 2 log(z) old: 235.88269815836225 log(z) New: 235.88078965205065\n",
+      "Converged in 2 iterations. log(z): 235.8827 +/-: 0.0168\n",
+      "\n",
+      "Filtered proposal samples: 911 valid samples out of 1000 total samples.\n",
+      "Estimation 6/10\n",
+      "iteration: 2 log(z) old: 235.87220374473446 log(z) New: 235.8707666869567\n",
+      "Converged in 2 iterations. log(z): 235.8722 +/-: 0.0169\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge:Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.95045707811053 log(z) New: 235.8866093983137\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.8866093983137 log(z) New: 235.88513311788896\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8866 +/-: 0.0165\n",
+      "INFO:morphZ.bridge:Filtered proposal samples: 908 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9406225162942 log(z) New: 235.86240648225194\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.86240648225194 log(z) New: 235.8607949106495\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8624 +/-: 0.0172\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "Estimation 7/10\n",
+      "iteration: 2 log(z) old: 235.8866093983137 log(z) New: 235.88513311788896\n",
+      "Converged in 2 iterations. log(z): 235.8866 +/-: 0.0165\n",
+      "\n",
+      "Filtered proposal samples: 908 valid samples out of 1000 total samples.\n",
+      "Estimation 8/10\n",
+      "iteration: 2 log(z) old: 235.86240648225194 log(z) New: 235.8607949106495\n",
+      "Converged in 2 iterations. log(z): 235.8624 +/-: 0.0172\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge:Filtered proposal samples: 923 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9555650554842 log(z) New: 235.8778907560744\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.8778907560744 log(z) New: 235.87612866528193\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8779 +/-: 0.0167\n",
+      "INFO:morphZ.bridge:Filtered proposal samples: 890 valid samples out of 1000 total samples.\n",
+      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.98464656240114 log(z) New: 235.8872515154888\n",
+      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.8872515154888 log(z) New: 235.88418152566456\n",
+      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8873 +/-: 0.0170\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered proposal samples: 923 valid samples out of 1000 total samples.\n",
+      "Estimation 9/10\n",
+      "iteration: 2 log(z) old: 235.8778907560744 log(z) New: 235.87612866528193\n",
+      "Converged in 2 iterations. log(z): 235.8779 +/-: 0.0167\n",
+      "\n",
+      "Filtered proposal samples: 890 valid samples out of 1000 total samples.\n",
+      "Estimation 10/10\n",
+      "iteration: 2 log(z) old: 235.8872515154888 log(z) New: 235.88418152566456\n",
+      "Converged in 2 iterations. log(z): 235.8873 +/-: 0.0170\n",
+      "\n",
+      "Saved log(z) to ./morphZ_eggbox//logz_morph_z_pair_0.01.txt\n",
+      "True: 235.856\n"
      ]
     }
    ],
